[package]
name = "portfolio-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.3.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]
